# cmake

./: CMakeLists.txt  README.md  main.c  run.sh
lib/: CMakeLists.txt  lib.c  lib.h
